# libCarNumOcr

./: .gitignore  CMakeLists.txt  CarNumOcr.cpp  CarNumOcr.h  main.cpp
include/: Recognizer.h  niBlackThreshold.h
include/src/: FineMapping.cpp  PlateDetection.cpp  PlateSegmentation.cpp  Recognizer.cpp  SegmentationFreeRecognizer.cpp  util.h
